# web-terminal

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
frontend/: main.js  package-lock.json  package.json
src/: frontend.rs  main.rs
