[package]
name = "two_wee_terminal"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "two_wee_terminal"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
